fix(bug): Menu > text overflow

--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,14 @@ body>div {
             }
           }
 
+          &>label>span,
+          &>span {
+            &+span {
+              display: flex;
+              flex-wrap: nowrap;
+            }
+          }
+
           &>label>span {
             cursor: pointer;
 
